--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "primereact": "^10.6.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "zustand": "^4.5.2"
   },
